<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HD Web Studio</string>
    <string name="company_description">HD Web Studio is the region\'s premier web design and web development company with locations in Martinsville, Virginia and Danville, Virginia</string>
    <string name="address" translatable="false">1 West Church Street\nSuite A\nMartinsville, VA 24112</string>
    <string name="website" translatable="false">www.hdwebstudio.com</string>
    <string name="email" translatable="false">info@hdwebstudio.com</string>
    <string name="phone" translatable="false">(276)666&#8211;2266</string>
    <string name="business_hours">Monday-Friday 8:30am to 5:00pm</string>
    <string name="logo_description">H D Web Logo. An H, a D, and the words web studio.</string>
    <string name="logo_description_sm" translatable="false">H D logo</string>
</resources>
